image cropper bugs fixed

--- a/src/app/views/add-store-forms/second-forms/store-logo/store-logo.component.scss
+++ b/src/app/views/add-store-forms/second-forms/store-logo/store-logo.component.scss
@@ -19,13 +19,13 @@
     object-fit: cover;
     border-radius: 50%;
 }
-.cropper-image {
-    padding: 10px;
-    max-width: 300px;
-    height:100%;
-    margin: auto;
-}
-.cropper-image img {
-    height:100%;
-    width:100%;
-}
+// .cropper-image {
+//     padding: 10px;
+//     max-width: 300px;
+//     height:100%;
+//     margin: auto;
+// }
+// .cropper-image img {
+//     height:100%;
+//     width:100%;
+// }
